# CUDA-Image-and-Video-codec

./: .gitmodules  CMakeLists.txt  CUDA_ImCod.sln  README.md
CUDA_ImCod/: CMakeLists.txt  CMakeSettings.json  CUDA_ImCod.vcxproj  Launcher.cu
CUDA_ImCod/BPC/: BPCEngine.hpp
CUDA_ImCod/BitStreamBuilder/: BitStreamBuilder.cpp  BitStreamBuilder.cu  BitStreamBuilder.cuh
CUDA_ImCod/DWT/: DWTGenerator.cuh  DWTGenerator.hpp
CUDA_ImCod/Engines/: Engine.cu  Engine.cuh
CUDA_ImCod/IO/: CommandLineParser.hpp  IOManager.hpp  IOManager.ipp
CUDA_ImCod/Image/: Image.hpp
CUDA_ImCod/LUT/n1_lossless/: refB.txt_15  refG.txt_4  refR.txt_9  sigB.txt_1  sigB.txt_4  sigB.txt_6  sigG.txt_0  sigG.txt_10  sigG.txt_3  sigG.txt_4  sigG.txt_5  sigG.txt_6  sigG.txt_7  sigG.txt_8  sigR.txt_10  sigR.txt_2  sigR.txt_3  sigR.txt_6  sigR.txt_7  sigR.txt_9  signB.txt_2  signB.txt_3  signB.txt_5  signB.txt_6  signB.txt_7  signG.txt_2  signG.txt_5  signG.txt_6  signG.txt_9  signR.txt_4  signR.txt_6  signR.txt_9
CUDA_ImCod/LUT/n1_lossy/: refB.txt_7  sigB.txt_1  sigB.txt_11  sigB.txt_2  sigB.txt_6  sigB.txt_7  sigG.txt_13  sigG.txt_2  sigG.txt_3  sigG.txt_5  sigG.txt_9  sigR.txt_10  sigR.txt_12  sigR.txt_13  sigR.txt_6  sigR.txt_8  sigR.txt_9  signB.txt_0  signB.txt_3  signB.txt_5  signB.txt_6  signB.txt_7  signB.txt_8  signG.txt_0  signG.txt_10  signG.txt_12  signG.txt_5  signG.txt_6  signG.txt_9  signR.txt_1  signR.txt_10  signR.txt_13
CUDA_ImCod/LUT/video_lossless/: refG.txt_10  sigB.txt_1  sigB.txt_12  sigB.txt_4  sigB.txt_6  sigB.txt_7  sigG.txt_2  sigG.txt_3  sigG.txt_4  sigG.txt_5  sigG.txt_7  sigR.txt_1  sigR.txt_4  sigR.txt_5  sigR.txt_6  signB.txt_4  signG.txt_0  signG.txt_10  signG.txt_2  signG.txt_4  signG.txt_6  signG.txt_7  signR.txt_1  signR.txt_2  signR.txt_3  signR.txt_4  signR.txt_5  signR.txt_6
CUDA_ImCod/LUT/video_lossy/: refB.txt_7  refR.txt_0  sigB.txt_1  sigB.txt_3  sigB.txt_7  sigG.txt_10  sigG.txt_11  sigG.txt_4  sigG.txt_5  sigR.txt_0  sigR.txt_4  sigR.txt_8  signB.txt_1  signB.txt_11  signB.txt_3  signB.txt_5  signB.txt_6  signB.txt_8  signB.txt_9  signG.txt_1  signG.txt_10  signG.txt_11  signG.txt_12  signG.txt_8  signG.txt_9  signR.txt_10  signR.txt_11  signR.txt_4  signR.txt_7  signR.txt_8
CUDA_ImCod/SupportFunctions/: AuxiliarFunctions.cpp
src/BPC/: BPCEngine.cu  BPCEngine.cuh  BPCEngine.ipp
src/BitStreamBuilder/: BitStreamBuilder.cu  BitStreamBuilder.hpp
src/DWT/: DWTGenerator.cu  DWTGenerator.ipp
src/Engines/: CodingEngine.cu  CodingEngine.cuh  DecodingEngine.cu  DecodingEngine.cuh
src/IO/: CommandLineParser.cpp  IOManager.ipp
src/Image/: Image.cpp
src/LUT/n1_lossless/: sigB.txt_10  sigB.txt_2  sigB.txt_3  sigB.txt_5  sigB.txt_7  sigB.txt_8  sigG.txt_2  sigR.txt_1  sigR.txt_4  sigR.txt_5  sigR.txt_8  signB.txt_1  signB.txt_15  signB.txt_4  signB.txt_8  signG.txt_1  signG.txt_3  signG.txt_4  signG.txt_7  signG.txt_8  signR.txt_1  signR.txt_11  signR.txt_2  signR.txt_3  signR.txt_5  signR.txt_7  signR.txt_8
src/LUT/n1_lossy/: header.txt  refG.txt_5  refR.txt_0  sigB.txt_10  sigB.txt_15  sigB.txt_3  sigB.txt_4  sigB.txt_5  sigB.txt_8  sigB.txt_9  sigG.txt_1  sigG.txt_10  sigG.txt_11  sigG.txt_4  sigG.txt_6  sigG.txt_7  sigG.txt_8  sigR.txt_1  sigR.txt_11  sigR.txt_2  sigR.txt_3  sigR.txt_4  sigR.txt_5  sigR.txt_7  signB.txt_10  signB.txt_11  signB.txt_13  signB.txt_2  signB.txt_4  signB.txt_9  signG.txt_11  signG.txt_2  signG.txt_3  signG.txt_4  signG.txt_7  signG.txt_8  (+9 more)
src/SupportFunctions/: AuxiliarFunctions.hpp
(+69 files in other folders)
